fixing content shift

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,7 +36,7 @@ body:has(.game-loading) {
   min-width: 100%;
 }
 
-.main {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
